--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,49 +1,71 @@
 # 2024-04-06
 
-共 154 条
+共 172 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 12:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 13:00:36 GMT+0800 (China Standard Time) -->
+1. [陕西失踪多日13岁女孩遗体被找到](https://so.toutiao.com/search?keyword=陕西失踪多日13岁女孩遗体被找到)
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
-1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
 1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
+1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
 1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
-1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
+1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
 1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
+1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
+1. [谢帝被大爷大妈diss了](https://so.toutiao.com/search?keyword=谢帝被大爷大妈diss了)
+1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
+1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
+1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
+1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
+1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
+1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [淄博烧烤店老板介绍顾客去别人家吃](https://so.toutiao.com/search?keyword=淄博烧烤店老板介绍顾客去别人家吃)
+1. [拜登被问会否放弃以色列后反问记者](https://so.toutiao.com/search?keyword=拜登被问会否放弃以色列后反问记者)
+1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
+1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
+1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
+1. [女子拍照被小孩哥抢镜配音“18岁”](https://so.toutiao.com/search?keyword=女子拍照被小孩哥抢镜配音“18岁”)
+1. [郭正亮录节目时炫耀新买的华为手机](https://so.toutiao.com/search?keyword=郭正亮录节目时炫耀新买的华为手机)
+1. [清明假期天水旅游热度同比暴涨20倍](https://so.toutiao.com/search?keyword=清明假期天水旅游热度同比暴涨20倍)
+1. [杨瀚森今年不参加NBA选秀](https://so.toutiao.com/search?keyword=杨瀚森今年不参加NBA选秀)
+1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
+1. [媒体：大学要教书更要重视“育人”](https://so.toutiao.com/search?keyword=媒体：大学要教书更要重视“育人”)
+1. [四川一校长和其牌友同期被查](https://so.toutiao.com/search?keyword=四川一校长和其牌友同期被查)
+1. [缅甸曼德勒发生炸弹袭击致2死9伤](https://so.toutiao.com/search?keyword=缅甸曼德勒发生炸弹袭击致2死9伤)
+1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
+1. [卢伟冰：很多SU7用户也买小米手机](https://so.toutiao.com/search?keyword=卢伟冰：很多SU7用户也买小米手机)
+1. [媒体：斯卢茨基对申花早已洞穿一切](https://so.toutiao.com/search?keyword=媒体：斯卢茨基对申花早已洞穿一切)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [28岁女子立遗嘱将约500万留给外婆](https://so.toutiao.com/search?keyword=28岁女子立遗嘱将约500万留给外婆)
+1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
+1. [大哥展示武艺最后一秒眼镜飞出](https://so.toutiao.com/search?keyword=大哥展示武艺最后一秒眼镜飞出)
+1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
+1. [伊朗民众举行大规模游行反以挺巴](https://so.toutiao.com/search?keyword=伊朗民众举行大规模游行反以挺巴)
+1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
+1. [广州多区发布暴雨冰雹预警](https://so.toutiao.com/search?keyword=广州多区发布暴雨冰雹预警)
+1. [曝青岛队一直在为杨瀚森留洋做铺垫](https://so.toutiao.com/search?keyword=曝青岛队一直在为杨瀚森留洋做铺垫)
+1. [媒体评景区进洞房喝茶3分钟收费168](https://so.toutiao.com/search?keyword=媒体评景区进洞房喝茶3分钟收费168)
+1. [四川江油发生3.2级地震](https://so.toutiao.com/search?keyword=四川江油发生3.2级地震)
+1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
+1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
+1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
+1. [王一博被说多动是有原因的](https://so.toutiao.com/search?keyword=王一博被说多动是有原因的)
 1. [独行侠险胜勇士终结对手6连胜](https://so.toutiao.com/search?keyword=独行侠险胜勇士终结对手6连胜)
 1. [雷军送张颂文的SU7真车现身](https://so.toutiao.com/search?keyword=雷军送张颂文的SU7真车现身)
-1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
-1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
-1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
 1. [曝美国正准备应对伊朗可能的袭击](https://so.toutiao.com/search?keyword=曝美国正准备应对伊朗可能的袭击)
-1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
-1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
 1. [婚恋网回应用张颂文照片征婚](https://so.toutiao.com/search?keyword=婚恋网回应用张颂文照片征婚)
-1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
-1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
-1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
-1. [四川一校长和其牌友同期被查](https://so.toutiao.com/search?keyword=四川一校长和其牌友同期被查)
-1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
-1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
-1. [郭正亮录节目时炫耀新买的华为手机](https://so.toutiao.com/search?keyword=郭正亮录节目时炫耀新买的华为手机)
-1. [住建部门回应卧室上方建卫生间](https://so.toutiao.com/search?keyword=住建部门回应卧室上方建卫生间)
-1. [谢帝被大爷大妈diss了](https://so.toutiao.com/search?keyword=谢帝被大爷大妈diss了)
-1. [淄博烧烤店老板介绍顾客去别人家吃](https://so.toutiao.com/search?keyword=淄博烧烤店老板介绍顾客去别人家吃)
 1. [成都醉酒男子多次夜间骚扰独居女生](https://so.toutiao.com/search?keyword=成都醉酒男子多次夜间骚扰独居女生)
-1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
 1. [13岁女孩失联十余天警方仍在搜寻](https://so.toutiao.com/search?keyword=13岁女孩失联十余天警方仍在搜寻)
 1. [淄博烧烤又火了 烧烤小哥一脸茫然](https://so.toutiao.com/search?keyword=淄博烧烤又火了+烧烤小哥一脸茫然)
 1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
 1. [拜登视察美被撞塌大桥](https://so.toutiao.com/search?keyword=拜登视察美被撞塌大桥)
 1. [美财政部降低对耶伦中国行成果期待](https://so.toutiao.com/search?keyword=美财政部降低对耶伦中国行成果期待)
-1. [以总理威胁伊朗：敢报复就坐等地狱](https://so.toutiao.com/search?keyword=以总理威胁伊朗：敢报复就坐等地狱)
-1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
-1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
 1. [曝俄乌在巴赫穆特以西战略重镇激战](https://so.toutiao.com/search?keyword=曝俄乌在巴赫穆特以西战略重镇激战)
 1. [美国新泽西4.8级地震 纽约震感强烈](https://so.toutiao.com/search?keyword=美国新泽西4.8级地震+纽约震感强烈)
-1. [淄博烧烤赵大爷下午4点开始撵客](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷下午4点开始撵客)
-1. [《与凤行》是HE](https://so.toutiao.com/search?keyword=《与凤行》是HE)
 1. [拜登为何敲打内塔尼亚胡](https://so.toutiao.com/search?keyword=拜登为何敲打内塔尼亚胡)
 1. [男子晒另一半从女友到老婆的变化](https://so.toutiao.com/search?keyword=男子晒另一半从女友到老婆的变化)
 1. [如何避免南昌大风坠亡事件再次发生](https://so.toutiao.com/search?keyword=如何避免南昌大风坠亡事件再次发生)
@@ -52,8 +74,6 @@
 1. [成都“迪士尼”打卡点被拆除](https://so.toutiao.com/search?keyword=成都“迪士尼”打卡点被拆除)
 1. [60岁泥水工20秒救起落水女孩](https://so.toutiao.com/search?keyword=60岁泥水工20秒救起落水女孩)
 1. [4月5日天水接待游客近35万人次](https://so.toutiao.com/search?keyword=4月5日天水接待游客近35万人次)
-1. [大哥展示武艺最后一秒眼镜飞出](https://so.toutiao.com/search?keyword=大哥展示武艺最后一秒眼镜飞出)
-1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
 1. [全国春灌大面积展开](https://so.toutiao.com/search?keyword=全国春灌大面积展开)
 1. [资产约25亿 威尔·史密斯称不快乐](https://so.toutiao.com/search?keyword=资产约25亿+威尔·史密斯称不快乐)
 1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
@@ -68,7 +88,6 @@
 1. [殡葬从业者讲述工作日常](https://so.toutiao.com/search?keyword=殡葬从业者讲述工作日常)
 1. [中美坦诚交流当前海空安全形势](https://so.toutiao.com/search?keyword=中美坦诚交流当前海空安全形势)
 1. [“一口价”黄金饰品售价将全线上涨](https://so.toutiao.com/search?keyword=“一口价”黄金饰品售价将全线上涨)
-1. [伊朗民众举行大规模游行反以挺巴](https://so.toutiao.com/search?keyword=伊朗民众举行大规模游行反以挺巴)
 1. [纽约地震发生时安理会正在开会](https://so.toutiao.com/search?keyword=纽约地震发生时安理会正在开会)
 1. [俄一处堤坝决口 近3100人被疏散](https://so.toutiao.com/search?keyword=俄一处堤坝决口+近3100人被疏散)
 1. [姜爷爷给福宝留纸条：好好吃饭](https://so.toutiao.com/search?keyword=姜爷爷给福宝留纸条：好好吃饭)
@@ -142,7 +161,6 @@
 1. [未来一周全国大部大气扩散条件较好](https://so.toutiao.com/search?keyword=未来一周全国大部大气扩散条件较好)
 1. [雷军的小米SU7编号是小米股票代码](https://so.toutiao.com/search?keyword=雷军的小米SU7编号是小米股票代码)
 1. [巴西父亲勒死女儿后被勒死在看守所](https://so.toutiao.com/search?keyword=巴西父亲勒死女儿后被勒死在看守所)
-1. [28岁女子立遗嘱将约500万留给外婆](https://so.toutiao.com/search?keyword=28岁女子立遗嘱将约500万留给外婆)
 1. [关咏荷复出拍广告](https://so.toutiao.com/search?keyword=关咏荷复出拍广告)
 1. [民调：泽连斯基支持率大跌](https://so.toutiao.com/search?keyword=民调：泽连斯基支持率大跌)
 1. [广东韶关暴雨 直击现场](https://so.toutiao.com/search?keyword=广东韶关暴雨+直击现场)
