--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,42 +1,66 @@
 # 2024-04-06
 
-共 203 条
+共 219 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 15:00:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 16:00:53 GMT+0800 (China Standard Time) -->
 1. [监控显示陕西失联13岁女孩曾在奔跑](https://so.toutiao.com/search?keyword=监控显示陕西失联13岁女孩曾在奔跑)
-1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
-1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
-1. [陕西失踪多日13岁女孩遗体被找到](https://so.toutiao.com/search?keyword=陕西失踪多日13岁女孩遗体被找到)
 1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
-1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
+1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
 1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
-1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
-1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
-1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
 1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
-1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
+1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
+1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
+1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
 1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
-1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
+1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
+1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
 1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
+1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
 1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
-1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
-1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
+1. [广州雷雨大风冰雹齐至](https://so.toutiao.com/search?keyword=广州雷雨大风冰雹齐至)
+1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
 1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
 1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
-1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
 1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
+1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
+1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
+1. [崔康熙：感谢泰山队球员拼搏到最后](https://so.toutiao.com/search?keyword=崔康熙：感谢泰山队球员拼搏到最后)
+1. [马克龙指俄干扰巴黎奥运 克宫驳斥](https://so.toutiao.com/search?keyword=马克龙指俄干扰巴黎奥运+克宫驳斥)
+1. [贺炜悼念杨雪：中国足球谢谢你来过](https://so.toutiao.com/search?keyword=贺炜悼念杨雪：中国足球谢谢你来过)
+1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
+1. [森林狼主帅：我们的进攻很糟糕](https://so.toutiao.com/search?keyword=森林狼主帅：我们的进攻很糟糕)
+1. [《与凤行》沈璃行止的婚后生活](https://so.toutiao.com/search?keyword=《与凤行》沈璃行止的婚后生活)
+1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
+1. [媒体人：国安进攻核心还是张玉宁](https://so.toutiao.com/search?keyword=媒体人：国安进攻核心还是张玉宁)
+1. [PJ·华盛顿砍32分5板3助5断2帽](https://so.toutiao.com/search?keyword=PJ·华盛顿砍32分5板3助5断2帽)
+1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
+1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
+1. [耳背爷爷在睡觉男子怎么也叫不开门](https://so.toutiao.com/search?keyword=耳背爷爷在睡觉男子怎么也叫不开门)
+1. [拜登被问会否放弃以色列后反问记者](https://so.toutiao.com/search?keyword=拜登被问会否放弃以色列后反问记者)
+1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
+1. [《与凤行》父母爱情来了](https://so.toutiao.com/search?keyword=《与凤行》父母爱情来了)
+1. [云南鲁甸地震当地人称震感强吊灯晃](https://so.toutiao.com/search?keyword=云南鲁甸地震当地人称震感强吊灯晃)
+1. [南部战区导弹艇模拟打击袭扰渔船](https://so.toutiao.com/search?keyword=南部战区导弹艇模拟打击袭扰渔船)
+1. [月嫂拔奶嘴给9天大新生儿灌奶](https://so.toutiao.com/search?keyword=月嫂拔奶嘴给9天大新生儿灌奶)
+1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
+1. [陕西失踪多日13岁女孩遗体被找到](https://so.toutiao.com/search?keyword=陕西失踪多日13岁女孩遗体被找到)
 1. [花旗上调黄金白银0-3个月目标价](https://so.toutiao.com/search?keyword=花旗上调黄金白银0-3个月目标价)
 1. [清明全国景区看起来都像有1亿人](https://so.toutiao.com/search?keyword=清明全国景区看起来都像有1亿人)
-1. [播音和表演专业年轻人去殡仪馆工作](https://so.toutiao.com/search?keyword=播音和表演专业年轻人去殡仪馆工作)
 1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
 1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
 1. [墨西哥与厄瓜多尔断绝外交关系](https://so.toutiao.com/search?keyword=墨西哥与厄瓜多尔断绝外交关系)
 1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
-1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
-1. [拜登被问会否放弃以色列后反问记者](https://so.toutiao.com/search?keyword=拜登被问会否放弃以色列后反问记者)
 1. [女子拍照被小孩哥抢镜配音“18岁”](https://so.toutiao.com/search?keyword=女子拍照被小孩哥抢镜配音“18岁”)
 1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
 1. [纪念国安去世球迷全场亮起星光](https://so.toutiao.com/search?keyword=纪念国安去世球迷全场亮起星光)
@@ -44,16 +68,11 @@
 1. [海牛主帅：伤停补时丢球运气太差](https://so.toutiao.com/search?keyword=海牛主帅：伤停补时丢球运气太差)
 1. [户籍员帮男子找到去世23年父亲照片](https://so.toutiao.com/search?keyword=户籍员帮男子找到去世23年父亲照片)
 1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
-1. [广州雷雨大风冰雹齐至](https://so.toutiao.com/search?keyword=广州雷雨大风冰雹齐至)
 1. [全新AMG GT63海外到店实拍](https://so.toutiao.com/search?keyword=全新AMG+GT63海外到店实拍)
-1. [女子称被盗一万七 民警找回二万七](https://so.toutiao.com/search?keyword=女子称被盗一万七+民警找回二万七)
-1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
 1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
 1. [女子雨天爬山时扶树触电晕倒被送医](https://so.toutiao.com/search?keyword=女子雨天爬山时扶树触电晕倒被送医)
-1. [《与凤行》沈璃行止的婚后生活](https://so.toutiao.com/search?keyword=《与凤行》沈璃行止的婚后生活)
 1. [古特雷斯：以方调查未触及问题根源](https://so.toutiao.com/search?keyword=古特雷斯：以方调查未触及问题根源)
 1. [清明假期天水旅游热度同比暴涨20倍](https://so.toutiao.com/search?keyword=清明假期天水旅游热度同比暴涨20倍)
-1. [《与凤行》父母爱情来了](https://so.toutiao.com/search?keyword=《与凤行》父母爱情来了)
 1. [美日菲联合巡逻南海有何图谋](https://so.toutiao.com/search?keyword=美日菲联合巡逻南海有何图谋)
 1. [谢帝被大爷大妈diss了](https://so.toutiao.com/search?keyword=谢帝被大爷大妈diss了)
 1. [韶关1小时雨量破纪录](https://so.toutiao.com/search?keyword=韶关1小时雨量破纪录)
@@ -64,7 +83,6 @@
 1. [欧文：今晚我们真的是拼了](https://so.toutiao.com/search?keyword=欧文：今晚我们真的是拼了)
 1. [韩媒：中国足球连亚洲前十都进不了](https://so.toutiao.com/search?keyword=韩媒：中国足球连亚洲前十都进不了)
 1. [美国派人来敲打 赖清德反将一军](https://so.toutiao.com/search?keyword=美国派人来敲打+赖清德反将一军)
-1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
 1. [控血糖的3个误区](https://so.toutiao.com/search?keyword=控血糖的3个误区)
 1. [两车相撞老人夹在中间竟安然无事](https://so.toutiao.com/search?keyword=两车相撞老人夹在中间竟安然无事)
 1. [强吻看病女子医生被行拘6日](https://so.toutiao.com/search?keyword=强吻看病女子医生被行拘6日)
@@ -109,7 +127,6 @@
 1. [资产约25亿 威尔·史密斯称不快乐](https://so.toutiao.com/search?keyword=资产约25亿+威尔·史密斯称不快乐)
 1. [“成都迪士尼”是啥梗](https://so.toutiao.com/search?keyword=“成都迪士尼”是啥梗)
 1. [柯基警官福仔遭宠物狗袭击](https://so.toutiao.com/search?keyword=柯基警官福仔遭宠物狗袭击)
-1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
 1. [布朗尼宣布参加2024年选秀](https://so.toutiao.com/search?keyword=布朗尼宣布参加2024年选秀)
 1. [无人机在俄境内坠落弹药爆炸致8伤](https://so.toutiao.com/search?keyword=无人机在俄境内坠落弹药爆炸致8伤)
 1. [实拍五菱缤果PLUS 510公里旗舰版](https://so.toutiao.com/search?keyword=实拍五菱缤果PLUS+510公里旗舰版)
@@ -125,7 +142,6 @@
 1. [美财长：拜登和我都反对中美“脱钩”](https://so.toutiao.com/search?keyword=美财长：拜登和我都反对中美“脱钩”)
 1. [俄称恐袭与特别军事行动存在关联](https://so.toutiao.com/search?keyword=俄称恐袭与特别军事行动存在关联)
 1. [以军用人工智能识别加沙轰炸目标](https://so.toutiao.com/search?keyword=以军用人工智能识别加沙轰炸目标)
-1. [贺炜悼念杨雪：中国足球谢谢你来过](https://so.toutiao.com/search?keyword=贺炜悼念杨雪：中国足球谢谢你来过)
 1. [小米辟谣雷军所乘SU7后轮螺丝脱落](https://so.toutiao.com/search?keyword=小米辟谣雷军所乘SU7后轮螺丝脱落)
 1. [中方敦促以立即停止对加沙军事进攻](https://so.toutiao.com/search?keyword=中方敦促以立即停止对加沙军事进攻)
 1. [女子大闹革命烈士陵园被警方带走](https://so.toutiao.com/search?keyword=女子大闹革命烈士陵园被警方带走)
