--- a/archives/toutiao-search/2024-04-06.md
+++ b/archives/toutiao-search/2024-04-06.md
@@ -1,47 +1,65 @@
 # 2024-04-06
 
-共 219 条
+共 234 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 06 2024 16:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 06 2024 17:00:58 GMT+0800 (China Standard Time) -->
+1. [伊朗发布威胁报复以色列宣传片](https://so.toutiao.com/search?keyword=伊朗发布威胁报复以色列宣传片)
 1. [监控显示陕西失联13岁女孩曾在奔跑](https://so.toutiao.com/search?keyword=监控显示陕西失联13岁女孩曾在奔跑)
-1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
 1. [我国春季植树造林大面积展开](https://so.toutiao.com/search?keyword=我国春季植树造林大面积展开)
-1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
-1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
-1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
+1. [花旗上调黄金白银0-3个月目标价](https://so.toutiao.com/search?keyword=花旗上调黄金白银0-3个月目标价)
+1. [小米SU7线束是铝不是铜？官方回应](https://so.toutiao.com/search?keyword=小米SU7线束是铝不是铜？官方回应)
+1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
+1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
 1. [纽约地区发生140年来最大地震](https://so.toutiao.com/search?keyword=纽约地区发生140年来最大地震)
 1. [高速堵车现场秒变小米SU7车展](https://so.toutiao.com/search?keyword=高速堵车现场秒变小米SU7车展)
-1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [女子猛砸奔驰车称其压到自家蒜苗](https://so.toutiao.com/search?keyword=女子猛砸奔驰车称其压到自家蒜苗)
+1. [胖东来今年将安排全员出国游](https://so.toutiao.com/search?keyword=胖东来今年将安排全员出国游)
 1. [马英九寻根问祖对马援像三鞠躬](https://so.toutiao.com/search?keyword=马英九寻根问祖对马援像三鞠躬)
-1. [10086回应注销手机号等于出卖自己](https://so.toutiao.com/search?keyword=10086回应注销手机号等于出卖自己)
-1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
 1. [天水麻辣烫大叔辟谣网售调料包](https://so.toutiao.com/search?keyword=天水麻辣烫大叔辟谣网售调料包)
-1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
-1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
-1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
-1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
-1. [女子半截身体被卷进扶梯](https://so.toutiao.com/search?keyword=女子半截身体被卷进扶梯)
-1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
-1. [广州雷雨大风冰雹齐至](https://so.toutiao.com/search?keyword=广州雷雨大风冰雹齐至)
-1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
-1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [金饰价格突破700元 大批黄金原料回购](https://so.toutiao.com/search?keyword=金饰价格突破700元+大批黄金原料回购)
 1. [3000名瓦格纳士兵加入车臣特种部队](https://so.toutiao.com/search?keyword=3000名瓦格纳士兵加入车臣特种部队)
-1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
-1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
-1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
-1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
-1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
-1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
-1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
+1. [耶伦希望美企在中国继续取得成功](https://so.toutiao.com/search?keyword=耶伦希望美企在中国继续取得成功)
 1. [打碎一个酒店杯子被要求赔偿150元](https://so.toutiao.com/search?keyword=打碎一个酒店杯子被要求赔偿150元)
+1. [警务机器人回派出所充电却没人开门](https://so.toutiao.com/search?keyword=警务机器人回派出所充电却没人开门)
+1. [云南脚踩商贩城管均被开除](https://so.toutiao.com/search?keyword=云南脚踩商贩城管均被开除)
+1. [三大运营商回应注销手机号](https://so.toutiao.com/search?keyword=三大运营商回应注销手机号)
+1. [孙俪过了大提琴一级考试](https://so.toutiao.com/search?keyword=孙俪过了大提琴一级考试)
+1. [墨西哥为何突然宣布与厄瓜多尔断交](https://so.toutiao.com/search?keyword=墨西哥为何突然宣布与厄瓜多尔断交)
+1. [雷军：大家拿着放大镜看小米SU7](https://so.toutiao.com/search?keyword=雷军：大家拿着放大镜看小米SU7)
+1. [特朗普：若我知有恐袭直接通知普京](https://so.toutiao.com/search?keyword=特朗普：若我知有恐袭直接通知普京)
+1. [前夫暴打女儿母亲含泪取证夺抚养权](https://so.toutiao.com/search?keyword=前夫暴打女儿母亲含泪取证夺抚养权)
+1. [首饰金价最高达每克710元](https://so.toutiao.com/search?keyword=首饰金价最高达每克710元)
+1. [媒体评南大拒绝录取虐猫考研生](https://so.toutiao.com/search?keyword=媒体评南大拒绝录取虐猫考研生)
+1. [林更新每句话都接住了](https://so.toutiao.com/search?keyword=林更新每句话都接住了)
+1. [以色列火速回应美国“最后通牒”](https://so.toutiao.com/search?keyword=以色列火速回应美国“最后通牒”)
+1. [毛新宇少将清明节携家人回韶山祭祖](https://so.toutiao.com/search?keyword=毛新宇少将清明节携家人回韶山祭祖)
+1. [邓超说孙俪可以练古筝](https://so.toutiao.com/search?keyword=邓超说孙俪可以练古筝)
+1. [美要求伊朗别将其设施作为打击目标](https://so.toutiao.com/search?keyword=美要求伊朗别将其设施作为打击目标)
+1. [当外国人看到兵马俑有多震撼](https://so.toutiao.com/search?keyword=当外国人看到兵马俑有多震撼)
+1. [伊能静10天瘦了12斤](https://so.toutiao.com/search?keyword=伊能静10天瘦了12斤)
+1. [广州雷雨大风冰雹齐至](https://so.toutiao.com/search?keyword=广州雷雨大风冰雹齐至)
+1. [女子买问界M7不到20天就充不上电](https://so.toutiao.com/search?keyword=女子买问界M7不到20天就充不上电)
+1. [鹈鹕仅领先国王和湖人1个胜场](https://so.toutiao.com/search?keyword=鹈鹕仅领先国王和湖人1个胜场)
+1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
+1. [专家：耶伦访广东了解中国优势产业](https://so.toutiao.com/search?keyword=专家：耶伦访广东了解中国优势产业)
+1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
+1. [警方回应女子举报前夫殴打女儿](https://so.toutiao.com/search?keyword=警方回应女子举报前夫殴打女儿)
+1. [国王战绩被湖人追平](https://so.toutiao.com/search?keyword=国王战绩被湖人追平)
+1. [女子乘自动扶梯上楼半个身子被卷入](https://so.toutiao.com/search?keyword=女子乘自动扶梯上楼半个身子被卷入)
+1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
+1. [男子回应被前妻取证打女儿称不属实](https://so.toutiao.com/search?keyword=男子回应被前妻取证打女儿称不属实)
+1. [媒体人：国安进攻仍有很多不足](https://so.toutiao.com/search?keyword=媒体人：国安进攻仍有很多不足)
+1. [墨西哥与厄瓜多尔断绝外交关系](https://so.toutiao.com/search?keyword=墨西哥与厄瓜多尔断绝外交关系)
+1. [云南一工地挖出二战遗留航空炸弹](https://so.toutiao.com/search?keyword=云南一工地挖出二战遗留航空炸弹)
+1. [乌司令与美乌防长通话讨论防空需求](https://so.toutiao.com/search?keyword=乌司令与美乌防长通话讨论防空需求)
+1. [广东韶关暴雨 3游客受困大峡谷景区](https://so.toutiao.com/search?keyword=广东韶关暴雨+3游客受困大峡谷景区)
+1. [以色列临时关闭28个驻外使馆](https://so.toutiao.com/search?keyword=以色列临时关闭28个驻外使馆)
 1. [崔康熙：感谢泰山队球员拼搏到最后](https://so.toutiao.com/search?keyword=崔康熙：感谢泰山队球员拼搏到最后)
 1. [马克龙指俄干扰巴黎奥运 克宫驳斥](https://so.toutiao.com/search?keyword=马克龙指俄干扰巴黎奥运+克宫驳斥)
 1. [贺炜悼念杨雪：中国足球谢谢你来过](https://so.toutiao.com/search?keyword=贺炜悼念杨雪：中国足球谢谢你来过)
-1. [男孩玩泥巴 自己搭建收拾乐此不疲](https://so.toutiao.com/search?keyword=男孩玩泥巴+自己搭建收拾乐此不疲)
 1. [森林狼主帅：我们的进攻很糟糕](https://so.toutiao.com/search?keyword=森林狼主帅：我们的进攻很糟糕)
 1. [《与凤行》沈璃行止的婚后生活](https://so.toutiao.com/search?keyword=《与凤行》沈璃行止的婚后生活)
-1. [烫伤事件是不是校园欺凌该谁来认定](https://so.toutiao.com/search?keyword=烫伤事件是不是校园欺凌该谁来认定)
 1. [媒体人：国安进攻核心还是张玉宁](https://so.toutiao.com/search?keyword=媒体人：国安进攻核心还是张玉宁)
 1. [PJ·华盛顿砍32分5板3助5断2帽](https://so.toutiao.com/search?keyword=PJ·华盛顿砍32分5板3助5断2帽)
 1. [梯子被卖 村民爬树上山洞拜太公](https://so.toutiao.com/search?keyword=梯子被卖+村民爬树上山洞拜太公)
@@ -55,11 +73,9 @@
 1. [月嫂拔奶嘴给9天大新生儿灌奶](https://so.toutiao.com/search?keyword=月嫂拔奶嘴给9天大新生儿灌奶)
 1. [耶伦指控中国电动汽车产业目的何在](https://so.toutiao.com/search?keyword=耶伦指控中国电动汽车产业目的何在)
 1. [陕西失踪多日13岁女孩遗体被找到](https://so.toutiao.com/search?keyword=陕西失踪多日13岁女孩遗体被找到)
-1. [花旗上调黄金白银0-3个月目标价](https://so.toutiao.com/search?keyword=花旗上调黄金白银0-3个月目标价)
 1. [清明全国景区看起来都像有1亿人](https://so.toutiao.com/search?keyword=清明全国景区看起来都像有1亿人)
 1. [小伙用纸箱投影缅怀宗庆后](https://so.toutiao.com/search?keyword=小伙用纸箱投影缅怀宗庆后)
 1. [云南昭通鲁甸县发生4.9级地震](https://so.toutiao.com/search?keyword=云南昭通鲁甸县发生4.9级地震)
-1. [墨西哥与厄瓜多尔断绝外交关系](https://so.toutiao.com/search?keyword=墨西哥与厄瓜多尔断绝外交关系)
 1. [伊朗警告美国：别落入以色列陷阱](https://so.toutiao.com/search?keyword=伊朗警告美国：别落入以色列陷阱)
 1. [女子拍照被小孩哥抢镜配音“18岁”](https://so.toutiao.com/search?keyword=女子拍照被小孩哥抢镜配音“18岁”)
 1. [美媒：地震时自由女神像明显颤动](https://so.toutiao.com/search?keyword=美媒：地震时自由女神像明显颤动)
@@ -67,7 +83,6 @@
 1. [国王主帅：福克斯打得太棒了](https://so.toutiao.com/search?keyword=国王主帅：福克斯打得太棒了)
 1. [海牛主帅：伤停补时丢球运气太差](https://so.toutiao.com/search?keyword=海牛主帅：伤停补时丢球运气太差)
 1. [户籍员帮男子找到去世23年父亲照片](https://so.toutiao.com/search?keyword=户籍员帮男子找到去世23年父亲照片)
-1. [美媒称伊朗可能下周发动袭击报复](https://so.toutiao.com/search?keyword=美媒称伊朗可能下周发动袭击报复)
 1. [全新AMG GT63海外到店实拍](https://so.toutiao.com/search?keyword=全新AMG+GT63海外到店实拍)
 1. [蔡磊称凳子长时间坐不住了](https://so.toutiao.com/search?keyword=蔡磊称凳子长时间坐不住了)
 1. [女子雨天爬山时扶树触电晕倒被送医](https://so.toutiao.com/search?keyword=女子雨天爬山时扶树触电晕倒被送医)
